fix: application vitical align & footer css

--- a/css/inventchip.css
+++ b/css/inventchip.css
@@ -15,6 +15,11 @@ a:hover {
     cursor: pointer;
 }
 
+/*行业应用*/
+.portfolio-over h3{
+    margin: 0;
+}
+
 /* ==================================================
   招聘信息样式
   ================================================== */
